fix popup blurry bug

--- a/src/styles/popupclients.css
+++ b/src/styles/popupclients.css
@@ -10,8 +10,8 @@
     border: var(--popup-color) 3px solid;
     border-radius: 15px;
     backdrop-filter: blur(13px);
-    width: 35%;
-    height: 80%;
+    width: 38%;
+    height: 75%;
 }
 
 
